// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.artifact-expansion.acceptance given: [case1] guard with $route in artifact pattern (root route) when: [t1] artifact created at route path then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 0/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i1.19bdec249480a7a036.r1.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.vision*.md
      ├─ reviews
      │   └─ r1: bash (l1, 1/∞)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       └─ review: .route/1.vision.guard.review.i1.19bdec249480a7a036.r1.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.artifact-expansion.acceptance given: [case1] guard with $route in artifact pattern (root route) when: [t2] approval granted and pass reattempted then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i1.19bdec249480a7a036.r1.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.vision*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .route/1.vision.guard.review.i1.19bdec249480a7a036.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.artifact-expansion.acceptance given: [case2] guard with $route in nested route directory when: [t0] artifact created in nested route then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 0/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/test-feature/.route/1.vision.guard.review.i1.9b72e27ac4d438845c.r1.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.vision*.md
      ├─ reviews
      │   └─ r1: bash (l1, 1/∞)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       └─ review: .behavior/test-feature/.route/1.vision.guard.review.i1.9b72e27ac4d438845c.r1.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.artifact-expansion.acceptance given: [case2] guard with $route in nested route directory when: [t1] approval granted on nested route then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/test-feature/.route/1.vision.guard.review.i1.9b72e27ac4d438845c.r1.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.vision*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .behavior/test-feature/.route/1.vision.guard.review.i1.9b72e27ac4d438845c.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
